# ops-challenge-fall-2025

./: .gitignore  README.md  localTest.py  pyproject.toml  requirements.txt
.github/workflows/: commenter.yml  grade.yml
src/: rolling_rank.cpp  setup.py  solution copy.py  solution.py
