[project]
name = "ops-challenge-fall-2025"
version = "0.1.0"
description = ""
authors = [
    {name = "AFT Root",email = "pkuaft@163.com​​"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cramjam (==2.11.0)",
    "fastparquet (==2024.11.0)",
    "fsspec (==2025.9.0)",
    "llvmlite (==0.45.0)",
    "numba (==0.62.0)",
    "numpy (==2.3.3)",
    "packaging (==25.0)",
    "pandas (==2.3.2)",
    "pip (==25.2)",
    "polars (==1.31.0)",
    "pyarrow (==21.0.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "setuptools (==78.1.1)",
    "six (==1.17.0)",
    "tzdata (==2025.2)",
    "wheel (==0.45.1)",
    "joblib (>=1.5.2,<2.0.0)",
    "bottleneck (>=1.6.0,<2.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-timeout (>=2.2.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

